--- a/index_onlineImages.html
+++ b/index_onlineImages.html
@@ -22,9 +22,9 @@
 </head>
 <body style="width: 650px; margin: 0 auto; background-color: #F7F7F7; font-family: sans-serif; color: #7e7b7b; font-weight: 100;">
     <a href="http://skybook.pro">
-        <img src="images/skybook_logo.png" alt="SKYBOOK.PRO" width="50%" style="display: block; margin: 0 auto; padding: 20px 0;">
+        <img src="https://github.com/chouaib-629/notificationSolde_skybook_mail/blob/main/images/skybook_logo.png?raw=true" alt="SKYBOOK.PRO" width="50%" style="display: block; margin: 0 auto; padding: 20px 0;">
     </a>
-    <img src="images/banner.jpg" alt="Cash" width="100%">
+    <img src="https://github.com/chouaib-629/notificationSolde_skybook_mail/blob/main/images/banner.jpg?raw=true" alt="Cash" width="100%">
     <div style="padding: 0 18px;">
         <h2>Cher(e) Client(e),</h2>
         <p style="font-style: italic;">Nous vous informons que le solde de votre compte est actuellement <span>en retard de paiement.</span></p>
@@ -44,7 +44,7 @@
     </div>
     <div style="display: flex; align-items: center; padding: 16px">
         <a href="http://skybook.pro" style="width: 40%; margin: 20px;">
-            <img src="images/skybook_logo.png" alt="SKYBOOK.PRO" width="100%">
+            <img src="https://github.com/chouaib-629/notificationSolde_skybook_mail/blob/main/images/skybook_logo.png?raw=true" alt="SKYBOOK.PRO" width="100%">
         </a>
         <div style="width: 60%; margin: 0 0 0 20px">
             <p style="font-size: 20px; text-indent: 0; font-weight: 600; font-style: italic; font-family: serif; color: #555555;margin: 0;">Amina</p>
@@ -52,6 +52,6 @@
             <a href="tel:+213770749081" style=" margin: 0; text-decoration: none; color: #555555; font-size: 18px; font-family: sans-serif;">0770 74 90 81</a>
         </div>
     </div>
-    <img src="./images/footer.png" width="100%" />
+    <img src="https://github.com/chouaib-629/notificationSolde_skybook_mail/blob/main/images/footer.png?raw=true" width="100%" />
 </body>
 </html>
