main table width and inline color adjustement

--- a/index_emailCompatible.html
+++ b/index_emailCompatible.html
@@ -6,7 +6,7 @@
     <title>Notification de Solde</title>
 </head>
 <body style="font-family: sans-serif; color: #7e7b7b; font-weight: 100; background-color: #F7F7F7; width: 650px; margin: 0 auto;">
-    <table width="100%" cellpadding="0" cellspacing="0" border="0">
+    <table align="center" width="650px" cellpadding="0" cellspacing="0" border="0">
         <tr>
             <td align="center" style="padding: 20px 0;">
                 <a href="http://skybook.pro" style="text-decoration: none;">
@@ -15,7 +15,7 @@
             </td>
         </tr>
         <tr>
-            <td align="center" style="padding: 20px 0;">
+            <td align="center">
                 <img src="https://github.com/chouaib-629/notificationSolde_skybook_mail/blob/main/images/banner.jpg?raw=tru" width="100%">
             </td>
         </tr>
@@ -30,8 +30,8 @@
                         <td width="50%" style="background: #ebeef0; padding: 10px; color: #d18a3c; font-weight: 600; text-align: center;">Montant</td>
                     </tr>
                     <tr>
-                        <td width="50%" style="background: #ebeef0; padding: 10px; font-weight: 600; text-align: center; font-style: italic;">Agence</td>
-                        <td width="50%" style="background: #ebeef0; padding: 10px; font-weight: 600; text-align: center;">- ,00 DZD</td>
+                        <td width="50%" style="background: #ebeef0; color: #7e7b7b; padding: 10px; font-weight: 600; text-align: center; font-style: italic;">Agence</td>
+                        <td width="50%" style="background: #ebeef0; color: #7e7b7b; padding: 10px; font-weight: 600; text-align: center;">- ,00 DZD</td>
                     </tr>
                 </table>
                 <p style="font-style: italic; text-indent: 8px;">Nous vous prions de bien vouloir <span style="color: #7e7b7b; font-weight: 600;">régulariser votre situation</span> dans les plus brefs délais.</p>
