removing italic style from core message

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <img src="images/banner.jpg" alt="Cash" width="100%">
     <div style="padding: 0 18px;">
         <h2>Cher(e) Client(e),</h2>
-        <p style="font-style: italic;">Nous vous informons que le solde de votre compte est actuellement <span>en retard de paiement.</span></p>
-        <p style="font-style: italic;">D'après nos registres, les informations suivantes sont liées à votre compte <span>en souffrance</span> :</p>
+        <p>Nous vous informons que le solde de votre compte est actuellement <span>en retard de paiement.</span></p>
+        <p>D'après nos registres, les informations suivantes sont liées à votre compte <span>en souffrance</span> :</p>
         <div style="display: flex; justify-content: space-around; background: #ebeef0;">
             <p style="color: #d18a3c; font-weight: 600;">Compte</p>
             <p style="color: #d18a3c; font-weight: 600;">Montant</p>
@@ -37,10 +37,10 @@
             <p style="font-weight: 600; font-style: italic;">Agence</p>
             <p style="font-weight: 600;">- ,00 DZD</p>
         </div>
-        <p style="font-style: italic;">Nous vous prions de bien vouloir <span>régulariser votre situation</span> dans les plus brefs délais.</p>
-        <p style="font-style: italic;">Si vous avez des <span>questions</span> ou souhaitez <span>discuter de votre compte</span>, n'hésitez pas à contacter notre <span>service financier</span> par email à <a href="mailto:finance@skybook.pro">finance@skybook.pro</a> ou par téléphone au <a href="tel:+213770749081">0770 74 90 81</a>.</p>
-        <p style="font-style: italic;">Nous vous remercions pour votre <span>attention</span> à ce message ainsi que pour votre <span>confiance</span>.</p>
-        <p style="font-style: italic;">Cordialement,</p>
+        <p>Nous vous prions de bien vouloir <span>régulariser votre situation</span> dans les plus brefs délais.</p>
+        <p>Si vous avez des <span>questions</span> ou souhaitez <span>discuter de votre compte</span>, n'hésitez pas à contacter notre <span>service financier</span> par email à <a href="mailto:finance@skybook.pro">finance@skybook.pro</a> ou par téléphone au <a href="tel:+213770749081">0770 74 90 81</a>.</p>
+        <p>Nous vous remercions pour votre <span>attention</span> à ce message ainsi que pour votre <span>confiance</span>.</p>
+        <p>Cordialement,</p>
     </div>
     <div style="display: flex; align-items: center; padding: 16px">
         <a href="http://skybook.pro" style="width: 40%; margin: 20px;">
