--- a/index_emailCompatible.html
+++ b/index_emailCompatible.html
@@ -22,8 +22,8 @@
         <tr>
             <td style="padding: 0 18px;">
                 <h2 style="color: #555555; font-weight: 200; font-size: 22px;">Cher(e) Client(e),</h2>
-                <p style="font-style: italic; text-indent: 8px;">Nous vous informons que le solde de votre compte est actuellement <span style="color: #7e7b7b; font-weight: 600;">en retard de paiement.</span></p>
-                <p style="font-style: italic; text-indent: 8px;">D'après nos registres, les informations suivantes sont liées à votre compte <span style="color: #7e7b7b; font-weight: 600;">en souffrance</span> :</p>
+                <p style="text-indent: 8px;">Nous vous informons que le solde de votre compte est actuellement <span style="color: #7e7b7b; font-weight: 600;">en retard de paiement.</span></p>
+                <p style="text-indent: 8px;">D'après nos registres, les informations suivantes sont liées à votre compte <span style="color: #7e7b7b; font-weight: 600;">en souffrance</span> :</p>
                 <table width="100%" cellpadding="0" cellspacing="0" border="0">
                     <tr>
                         <td width="50%" style="background: #ebeef0; padding: 10px; color: #d18a3c; font-weight: 600; text-align: center;">Compte</td>
@@ -34,10 +34,10 @@
                         <td width="50%" style="background: #ebeef0; color: #7e7b7b; padding: 10px; font-weight: 600; text-align: center;">- ,00 DZD</td>
                     </tr>
                 </table>
-                <p style="font-style: italic; text-indent: 8px;">Nous vous prions de bien vouloir <span style="color: #7e7b7b; font-weight: 600;">régulariser votre situation</span> dans les plus brefs délais.</p>
-                <p style="font-style: italic; text-indent: 8px;">Si vous avez des <span style="color: #7e7b7b; font-weight: 600;">questions</span> ou souhaitez <span style="color: #7e7b7b; font-weight: 600;">discuter de votre compte</span>, n'hésitez pas à contacter notre <span style="color: #7e7b7b; font-weight: 600;">service financier</span> par email à <a href="mailto:finance@skybook.pro" style="text-decoration: none; color: #7e7b7b; color: #7e7b7b; font-weight: 600;">finance@skybook.pro</a> ou par téléphone au <a href="tel:+213770749081" style="text-decoration: none; color: #7e7b7b; color: #7e7b7b; font-weight: 600;">0770 74 90 81</a>.</p>
-                <p style="font-style: italic; text-indent: 8px;">Nous vous remercions pour votre <span style="color: #7e7b7b; font-weight: 600;">attention</span> à ce message ainsi que pour votre <span style="color: #7e7b7b; font-weight: 600;">confiance</span>.</p>
-                <p style="font-style: italic; text-indent: 8px;">Cordialement,</p>
+                <p style="text-indent: 8px;">Nous vous prions de bien vouloir <span style="color: #7e7b7b; font-weight: 600;">régulariser votre situation</span> dans les plus brefs délais.</p>
+                <p style="text-indent: 8px;">Si vous avez des <span style="color: #7e7b7b; font-weight: 600;">questions</span> ou souhaitez <span style="color: #7e7b7b; font-weight: 600;">discuter de votre compte</span>, n'hésitez pas à contacter notre <span style="color: #7e7b7b; font-weight: 600;">service financier</span> par email à <a href="mailto:finance@skybook.pro" style="text-decoration: none; color: #7e7b7b; color: #7e7b7b; font-weight: 600;">finance@skybook.pro</a> ou par téléphone au <a href="tel:+213770749081" style="text-decoration: none; color: #7e7b7b; color: #7e7b7b; font-weight: 600;">0770 74 90 81</a>.</p>
+                <p style="text-indent: 8px;">Nous vous remercions pour votre <span style="color: #7e7b7b; font-weight: 600;">attention</span> à ce message ainsi que pour votre <span style="color: #7e7b7b; font-weight: 600;">confiance</span>.</p>
+                <p style="text-indent: 8px;">Cordialement,</p>
             </td>
         </tr>
         <tr>
