--- a/index_emailCompatible.html
+++ b/index_emailCompatible.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notification de Solde</title>
 </head>
-<body style="font-family: sans-serif; color: #7e7b7b; font-weight: 100; background-color: #F7F7F7; width: 650px; margin: 0 auto;">
+<body style="font-family: sans-serif; color: #7e7b7b; font-weight: 100; background-color: #F7F7F7; width: 600px; margin: 0 auto;">
     <table align="center" width="650px" cellpadding="0" cellspacing="0" border="0">
         <tr>
             <td align="center" style="padding: 20px 0;">
@@ -24,7 +24,7 @@
                 <h2 style="color: #555555; font-weight: 200; font-size: 22px;">Cher(e) Client(e),</h2>
                 <p style="text-indent: 8px;">Nous vous informons que le solde de votre compte est actuellement <span style="color: #7e7b7b; font-weight: 600;">en retard de paiement.</span></p>
                 <p style="text-indent: 8px;">D'après nos registres, les informations suivantes sont liées à votre compte <span style="color: #7e7b7b; font-weight: 600;">en souffrance</span> :</p>
-                <table width="100%" cellpadding="0" cellspacing="0" border="0">
+                <table align="center" width="100%" cellpadding="0" cellspacing="0" border="0">
                     <tr>
                         <td width="50%" style="background: #ebeef0; padding: 10px; color: #d18a3c; font-weight: 600; text-align: center;">Compte</td>
                         <td width="50%" style="background: #ebeef0; padding: 10px; color: #d18a3c; font-weight: 600; text-align: center;">Montant</td>
@@ -50,9 +50,9 @@
                             </a>
                         </td>
                         <td width="60%" style="padding: 0 0 0 20px;">
-                            <p style="font-size: 20px; font-weight: 600; font-style: italic; font-family: serif; color: #555555; margin: 0;">Amina</p>
-                            <p style="font-size: 17px; font-family: sans-serif; color: #555555; margin: 6px 0;">Service Financier</p>
-                            <a href="tel:+213770749081" style="text-decoration: none; color: #555555; font-size: 18px; font-family: sans-serif;">0770 74 90 81</a>
+                            <p style="font-weight: 600; font-style: italic; font-family: serif; color: #555555; margin: 0;">Amina</p>
+                            <p style="font-family: sans-serif; color: #555555; margin: 6px 0;">Service Financier</p>
+                            <a href="tel:+213770749081" style="text-decoration: none; color: #555555; font-family: sans-serif;">0770 74 90 81</a>
                         </td>
                     </tr>
                 </table>
